--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "external/cotire"]
 	path = external/cotire
 	url = https://github.com/sakra/cotire
+[submodule "external/clip"]
+	path = external/clip
+	url = https://github.com/nullworks/clip
