--- a/src/hacks/CMakeLists.txt
+++ b/src/hacks/CMakeLists.txt
@@ -46,5 +46,6 @@ if(EnableVisuals)
             "${CMAKE_CURRENT_LIST_DIR}/Radar.cpp"
             "${CMAKE_CURRENT_LIST_DIR}/SkinChanger.cpp"
             "${CMAKE_CURRENT_LIST_DIR}/SpyAlert.cpp"
-            "${CMAKE_CURRENT_LIST_DIR}/Thirdperson.cpp")
+            "${CMAKE_CURRENT_LIST_DIR}/Thirdperson.cpp"
+            "${CMAKE_CURRENT_LIST_DIR}/MCHealthbar.cpp")
 endif()
