--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,6 +20,7 @@ set(files "${CMAKE_CURRENT_LIST_DIR}/angles.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/prediction.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/projlogging.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/sconvars.cpp"
+        "${CMAKE_CURRENT_LIST_DIR}/soundcache.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/targethelper.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/textfile.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/textmode.cpp"
